--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fc-design-system",
   "version": "0.0.1",
+  "workspaces": [
+    "packages/**/*",
+    "services/**/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
