--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -12,7 +12,7 @@
     "./themes.css": "./dist/themes.css"
   },
   "scripts": {
-    "build": "npm run clean && npm run build:js && npm run build:type && npm run build:css",
+    "build": "yarn clean && yarn build:js && yarn build:type && yarn build:css",
     "build:js": "node build.js",
     "build:type": "tsc --declaration --emitDeclarationOnly",
     "build:css": "node ./scripts/build-css-module.js",
