--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "exports": {
     ".": {
-      "types": "./dist/imdex.d.ts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "yarn clean && yarn build:js && yarn build:type && yarn build:css",
     "build:js": "node build.js",
-    "build:type": "yarn tsc --declaration --emitDeclarationOnly",
+    "build:type": "yarn tsc --emitDeclarationOnly",
     "build:css": "node ./scripts/build-css-module.js",
     "clean": "rm -rf dist"
   },
