--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nx build",
     "graph": "nx run-many --target=build --graph",
-    "dev:all": "yarn dev:storybook yarn dev:package",
+    "dev:all": "yarn dev:storybook & yarn dev:packages",
     "dev:storybook": "nx storybook @fastcampus/storybook",
-    "dev:package": "nx run-many --target=dev --projects='@fastcampus/react-components-*'"
+    "dev:packages": "nx run-many --target=dev --projects='@fastcampus/react-hooks-*,@fastcampus/react-components-*'"
   },
   "packageManager": "yarn@3.6.3",
   "devDependencies": {
